# BioinfoFlow

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  RUNBOOK.md  deploy.sh  docker-compose.gpu.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  release-please-config.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  vulture_whitelist.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_agent_traces_and_conversation_fields.py  0003_project_workflow_bindings_and_pins.py  0004_agent_approvals_and_policy_mode.py  0005_scheduled_tasks.py  0005_workflow_launch_defaults.py  0006_audit_logs_and_retry_delay.py  0007_batches_and_notifications.py  0008_add_user_id_to_projects_and_conversations.py  0009_add_user_settings.py  (+56 more)
backend/app/: config.py  database.py  enums.py  main.py  path_layout.py  startup_logging.py  workspace.py
backend/scripts/: agent_harness.py  docker-entrypoint.sh  export_cli_contract.py  export_openapi_contract.py  init_db.py  migrate_path_contract_v3.py  repair_run_dags.py  revalidate_workflows.py  seed_data.py  test-targeted-coverage.sh  test_container_startup_config.py  test_deploy_script.py  update_llm_catalog.py
backend/tests/: conftest.py  test_agent_remote_tools.py  test_config_env_loading.py  test_database.py  test_database_schema.py  test_docker_entrypoint.py  test_dockerfile_packaging.py  test_local_first_run.py  test_models.py  test_path_layout.py  test_path_layout_security.py  test_remote_connections_api.py  test_remote_execution.py  test_repositories.py  test_schemas.py  test_smoke.py  test_startup_logging.py  test_voice_deployment.py
(+1666 files in other folders)
